--- a/views/template.mustache
+++ b/views/template.mustache
@@ -17,11 +17,68 @@
 			<h1>{{name}}</h1>
 			<hr />
       <button>Use This Template</button>
+      <form style="margin-top:40px">
+        <input id="input-name" type="text" placeholder="Full Name" /><br />
+        <input id="input-email" type="text" placeholder="Email" /><br />
+        <input id="input-password" type="password" placeholder="Password" /><br />
+        <button id="btn-register">Join</button>
+        <input id="input-redirect" type="hidden" value="/template/{{slug}}" />
+      </form>
 		</div>
 	</div>
 
   <script type="text/javascript" src="/js/jquery.js"></script>
 	<script type="text/javascript" src="/js/mustache.js"></script>
-  <script type="text/javascript" src="/js/app.js"></script>
+  <script type="text/javascript">
+    (function(){
+      $('#btn-register').click(function(event){
+        if (event)
+          event.preventDefault()
+
+        var visitor = {
+          fullName: $('#input-name').val().trim(),
+          email: $('#input-email').val().trim(),
+          password: $('#input-password').val().trim()
+        }
+
+        var required = ['password', 'email', 'fullName']
+        var missing = null
+        required.forEach(function(attr){
+          if (visitor[attr].length == 0){
+            missing = attr
+          }
+        })
+
+        if (missing != null){
+          alert('Please enter your '+missing.toUpperCase())
+          return
+        }
+
+        console.log('Register button clicked: ' + JSON.stringify(visitor))
+        $.ajax({
+          url:'/account/register',
+          type: 'POST',
+          data: visitor,
+          success: function(data, status, xhr){
+            // {"confirmation":"success","user":{"id":"5c2002867ca814083d0aa5d0","username":"dan.kwon234",
+            // "email":"dan.kwon234@gmail.com","image":"https://lh3.googleusercontent.com/FdU2WvDKVMndsRNCSfypX3U4k_AiPC5-OZDIXER_yXJEBhmFjdO2NTQqJVaj9rcLQl-KLO8rRQpBhCOkdtkDT0e0Ig",
+            // "slug":"dan.kwon234-hotoe5","notifications":[]}}
+
+            if (data.confirmation != 'success'){
+  						alert('Error: ' + data.message)
+  						return
+  					}
+
+            var user = data.user
+            console.log(JSON.stringify(user))
+            // TODO: redirect to account page
+          },
+          error: function(xhr, status, err){
+            alert(err.message)
+          }
+        })
+      })
+    })()
+  </script>
 </body>
 </html>
