--- a/views/template.mustache
+++ b/views/template.mustache
@@ -66,7 +66,7 @@
           return
         }
 
-        console.log('Register button clicked: ' + JSON.stringify(visitor))
+        // console.log('Register button clicked: ' + JSON.stringify(visitor))
         $.ajax({
           url:'/account/register',
           type: 'POST',
@@ -81,7 +81,7 @@
   					}
 
             var user = data.user
-            console.log(JSON.stringify(data))
+            // console.log(JSON.stringify(data))
             if (data.redirect != null){
               window.location.href = data.redirect // redirect to data.redirect endpoint
               return
