--- a/views/template.mustache
+++ b/views/template.mustache
@@ -63,37 +63,20 @@
           return
         }
 
-        // 1. create app using current profile as profile property
-        // 2. send followup request to /account/launchtemplate with
-        // params: {app:'abc', appId:'123', source:'landing-template-slug'}
-        // where "app" param is the slug of the new site
-
-        // var newSite = {
-        //   name: $('#input-site-name').val().trim(), // this needs to be entered by the user
-        //   profile: {
-        //     slug: user.slug,
-      	// 		image: user.image,
-      	// 		username: user.username,
-      	// 		lastName: user.lastName,
-      	// 		firstName: user.firstName,
-      	// 		id: user.id
-        //   }
-        // }
-
-        // if (newSite.name.length == 0){
+        // var siteName = $('#input-site-name').val().trim() // this needs to be entered by the user
+        // if (siteName.length == 0){
         //   alert('Please enter a name for your site')
         //   return
         // }
 
-        var siteName = $('#input-site-name').val().trim() // this needs to be entered by the user
-        if (siteName.length == 0){
-          alert('Please enter a name for your site')
-          return
+        var body = {
+          name: $('#input-site-name').val().trim() // this needs to be entered by the user,
+          source: template.id // ID of the template being copied
         }
 
-        var body = {
-          name: siteName,
-          source: template.id // ID of the template being copied
+        if (body.name.length == 0){
+          alert('Please enter a name for your site')
+          return
         }
 
         postRequest('/account/launchtemplate', body, function(err, response){
@@ -104,34 +87,6 @@
 
           console.log('SITE LAUNCHED: ' + JSON.stringify(response))
         })
-
-        // console.log('Launch Template: ' + JSON.stringify(newSite))
-        // postRequest('/api/site', newSite, function(err, data){
-        //   if (err){
-        //     alert('Error: ' + err.message)
-        //     return
-        //   }
-        //
-        //   console.log('NEW SITE: ' + JSON.stringify(data))
-        //   // NEW SITE: {"confirmation":"success","result":{"profile":{},"format":"vertex","clonePrice":0,"collaborators":[],"tags":[],"invited":[],"isClone":"no","cloneSource":"","canClone":"no","featured":"no","published":"no","github":"","slug":"test-site-vgsqok","name":"test site","description":"","image":"https://lh3.googleusercontent.com/zcu5RGyy3JbHQkhvMlrT6fjGcrs1TC7Gu0VaIJbCtwCA-vBr_NabfWTt_Sk0YceR59XoLROBANLiSPG6x-XfTlZMOA","images":[],"url":"","resources":["user","post","comment"],"oauth":{},"smtp":{},"stripe":{},"api":{"key":"92df74a8-d720-4e8f-9990-bf9228dd91a6","secret":""},"functions":{},"pages":["home"],"authorized":["92df74a8-d720-4e8f-9990-bf9228dd91a6"],"services":["datastore","blog","storage"],"template":{"category":"misc","status":"dev"},"timestamp":"2018-12-24T05:02:32.516Z","schema":"site","id":"5c206868390cba0db3199116"}}
-        //
-        //   var site = data.result
-        //   var params = {
-    		// 		source: template.slug, // source project that is being copied
-    		// 		app: site.slug, // new app to copy source to
-    		// 		appId: site.id
-    		// 	}
-        //
-        //   // Send "params" to '/account/launchtemplate' endpoint
-        //   postRequest('/account/launchtemplate', params, function(err, response){
-        //     if (err){
-        //       alert('Error: ' + err.message)
-        //       return
-        //     }
-        //
-        //     console.log('SITE LAUNCHED: ' + JSON.stringify(response))
-        //   })
-        // })
       }
 
       // hide register form, user already signed up
