--- a/views/template.mustache
+++ b/views/template.mustache
@@ -70,7 +70,7 @@
         // }
 
         var body = {
-          name: $('#input-site-name').val().trim() // this needs to be entered by the user,
+          name: $('#input-site-name').val().trim(), // this needs to be entered by the user,
           source: template.id // ID of the template being copied
         }
 
