--- a/views/template.mustache
+++ b/views/template.mustache
@@ -73,7 +73,8 @@
           return
         }
 
-        postRequest('/account/launchtemplate', body, function(err, response){
+//        postRequest('/account/launchtemplate', body, function(err, response){
+          postRequest('/account/launch-template', body, function(err, response){
           if (err){
             alert('Error: ' + err.message)
             return
