clear out launch template container

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -99,7 +99,7 @@
         return
       }
 
-      $('#launch-template-container').css('visibility', 'hidden')
+      $('#launch-template-container').html('')
 
       $('#btn-register').click(function(event){
         if (event)
