--- a/views/template.mustache
+++ b/views/template.mustache
@@ -28,7 +28,6 @@
         <button id="btn-register">Join</button>
         <input id="input-redirect" type="hidden" value="/template/{{template.slug}}" />
       </form>
-      <button id="btn-check-template">check template</button>
 		</div>
 	</div>
 
@@ -75,13 +74,6 @@
         })
       }
 
-      $('#btn-check-template').click(function(){
-        setTimeout(function(){
-          // working version: landing-template-90347a
-          checkTemplate('landing-template-90347')
-        }, 4000)
-      })
-
       var launchTemplate = function(){
         if (user == null){
           alert('Please log in or register to clone this site.')
@@ -98,14 +90,13 @@
           return
         }
 
-//        postRequest('/account/launchtemplate', body, function(err, response){
           postRequest('/account/launch-template', body, function(err, response){
           if (err){
             alert('Error: ' + err.message)
             return
           }
 
-          console.log('SITE LAUNCHED: ' + JSON.stringify(response))
+          // console.log('SITE LAUNCHED: ' + JSON.stringify(response))
           setTimeout(function(){
             checkTemplate(response.data.slug)
           }, 4000)
