render sites on account page

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -15,6 +15,12 @@
         {{user.username}}<br />
         {{user.email}}
       </p>
+      <h3>Sites</h3>
+      <ol>
+        {{#sites}}
+        <li>{{name}}</li>
+        {{/sites}}
+      </ol>
 		</div>
 
 	</div>
