--- a/views/account.mustache
+++ b/views/account.mustache
@@ -18,7 +18,7 @@
       <h3>Sites</h3>
       <ol>
         {{#sites}}
-        <li>{{name}}</li>
+        <li><a href="/template/{{slug}}">{{name}}</a></li>
         {{/sites}}
       </ol>
 		</div>
