--- a/views/index.mustache
+++ b/views/index.mustache
@@ -21,6 +21,7 @@
 				<li><a class="category-link" href="#">{{.}}</a></li>
 				{{/categories}}
 			</ul>
+      <a id="btn-account" class="btn btn-info" href="#">My Account</a>
 		</div>
 
 		<div class="col-md-6">
