hide account button if not logged in

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -21,7 +21,9 @@
 				<li><a class="category-link" href="#">{{.}}</a></li>
 				{{/categories}}
 			</ul>
-      <a id="btn-account" class="btn btn-info" href="#">My Account</a>
+      <div id="btn-account-container">
+        <a class="btn btn-info" href="#">My Account</a>
+      </div>
 		</div>
 
 		<div class="col-md-6">
