--- a/views/index.mustache
+++ b/views/index.mustache
@@ -22,7 +22,7 @@
 				{{/categories}}
 			</ul>
       <div id="btn-account-container">
-        <a class="btn btn-info" href="#">My Account</a>
+        <a class="btn btn-info" href="/me">My Account</a>
       </div>
 		</div>
 
