--- a/views/account.mustache
+++ b/views/account.mustache
@@ -5,9 +5,10 @@
   <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
 </head>
 
-<body class="container">
-	<div class="row">
+<body style="padding-top:70px">
+  {{>nav}}
 
+	<div class="row">
 		<div class="col-md-4 col-md-offset-2">
 			<h1>account page</h1>
 			<hr />
