--- a/views/template.mustache
+++ b/views/template.mustache
@@ -5,7 +5,9 @@
   <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
 </head>
 
-<body class="container">
+<body style="padding-top:70px">
+  {{>nav}}
+
 	<div class="row">
 
 		<div class="col-md-2 col-md-offset-2">
