--- a/views/index.mustache
+++ b/views/index.mustache
@@ -10,7 +10,9 @@
 	</style>
 </head>
 
-<body class="container">
+<body style="padding-top:70px">
+  {{>nav}}
+  
 	<div class="row">
 
 		<div class="col-md-2 col-md-offset-2">
