account button in nav bar

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     Vertex 360
+    <div id="btn-account-container">
+      <a class="btn btn-info" href="/me">My Account</a>
+    </div>
   </div>
 </nav>
