--- a/views/admin/overview.mustache
+++ b/views/admin/overview.mustache
@@ -1,5 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en-US">
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
+</head>
 
+<body style="padding-top:70px">
+  {{>nav}}
 
-<h1>Admin overview page</h1>
+	<div class="row">
+		<div class="col-md-4 col-md-offset-2">
+      <h1>Admin overview page</h1>
+			<hr />
+		</div>
+    <div class="col-md-4">
+      <h1>{{site.name}}</h1>
+		</div>
+
+	</div>
+
+  <script type="text/javascript" src="/js/jquery.js"></script>
+	<script type="text/javascript" src="/js/mustache.js"></script>
+</body>
 </html>
