--- a/views/admin/overview.mustache
+++ b/views/admin/overview.mustache
@@ -15,6 +15,10 @@
 		</div>
     <div class="col-md-4">
       <h1>{{site.name}}</h1>
+      <ul>
+        <li><a href="/admin/pages/{{site.slug}}">PAGES</a></li>
+        <li><a href="/admin/cms/{{site.slug}}">CMS</a></li>
+      </ul>
 		</div>
 
 	</div>
