--- a/views/admin/overview.mustache
+++ b/views/admin/overview.mustache
@@ -11,6 +11,7 @@
 	<div class="row">
 		<div class="col-md-4 col-md-offset-2">
       <h1>Admin overview page</h1>
+      <a class="btn btn-success" href="https://{{site.slug}}.vertex360.co/">View Site</a>
 			<hr />
 		</div>
     <div class="col-md-4">
