connect log out

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -14,7 +14,8 @@
 			<hr />
       <p>
         {{user.username}}<br />
-        {{user.email}}
+        {{user.email}}<br />
+        <a href="#">Log Out</a>
       </p>
       <h3>Sites</h3>
       <ol>
