--- a/views/account.mustache
+++ b/views/account.mustache
@@ -15,7 +15,7 @@
       <p>
         {{user.username}}<br />
         {{user.email}}<br />
-        <a href="#">Log Out</a>
+        <a href="/account/logout">Log Out</a>
       </p>
       <h3>Sites</h3>
       <ol>
