--- a/views/index.mustache
+++ b/views/index.mustache
@@ -23,7 +23,17 @@
 				<li><a class="category-link" href="#">{{.}}</a></li>
 				{{/categories}}
 			</ul>
+		</div>
 
+		<div class="col-md-4">
+			<h1>templates</h1>
+			<hr />
+			<div id="templates"></div>
+		</div>
+
+    <div class="col-md-4">
+			<h1>auth</h1>
+			<hr />
       <form>
         <input id="input-register-name" type="text" placeholder="Name" name="name" /><br />
         <input id="input-register-email" type="text" placeholder="Email" name="email" /><br />
@@ -39,11 +49,6 @@
       </form>
 		</div>
 
-		<div class="col-md-6">
-			<h1>templates</h1>
-			<hr />
-			<div id="templates"></div>
-		</div>
 	</div>
 
 	<script type="text/template" id="tpl-list-item-template">
