--- a/views/account.mustache
+++ b/views/account.mustache
@@ -9,7 +9,7 @@
   {{>nav}}
 
 	<div class="row">
-		<div class="col-md-4 col-md-offset-2">
+		<div class="col-md-2 col-md-offset-2">
 			<h1>account page</h1>
 			<hr />
       <p>
@@ -17,13 +17,18 @@
         {{user.email}}<br />
         <a href="/account/logout">Log Out</a>
       </p>
-      <h3>Sites</h3>
+		</div>
+
+
+    <div class="col-md-4">
+      <h1>Sites</h1>
+      <hr />
       <ol>
         {{#sites}}
         <li><a href="/admin/{{slug}}">{{name}}</a></li>
         {{/sites}}
       </ol>
-		</div>
+    </div>
 
 	</div>
 
