--- a/views/account.mustache
+++ b/views/account.mustache
@@ -10,7 +10,7 @@
 
 	<div class="row">
 		<div class="col-md-2 col-md-offset-2">
-			<h1>account page</h1>
+			<h1>Account</h1>
 			<hr />
       <p>
         {{user.username}}<br />
