add logo to nav bar

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="/dist/css/style.min.css">
+  <style>
+    #logo img {
+      max-width: 160px;
+    }
+  </style>
 </head>
 
 <body>
@@ -18,7 +23,9 @@
 			<div class="left-side">
 
 				<div id="logo">
-					<a href="/"><img src="/images/logo.png" alt=""></a>
+					<a href="/">
+            <img src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-2.svg" alt="">
+          </a>
 				</div>
 
 				<div class="mmenu-trigger">
