--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -8,6 +8,11 @@
     #logo img {
       max-width: 160px;
     }
+
+    #footer-logo {
+      max-width: 120px;
+    }
+
   </style>
 </head>
 
@@ -35,68 +40,22 @@
 						</span>
 					</button>
 				</div>
-
-
-				<!-- Main Navigation -->
 				<nav id="navigation" class="style-1">
 					<ul id="responsive">
-
-						<li><a class="current" href="#">Home</a>
-							<ul>
-								<li><a href="index.html">Home 1</a></li>
-								<li><a href="index-2.html">Home 2</a></li>
-								<li><a href="index-3.html">Home 3</a></li>
-								<li><a href="index-4.html">Home 4</a></li>
+						<li><a class="current" href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Templates</a>
+              <ul>
+								<li><a href="#">Dashboard</a></li>
+								<li><a href="#">Messages</a></li>
+								<li><a href="#">Bookings</a></li>
+								<li><a href="#">My Listings</a></li>
+								<li><a href="#">Reviews</a></li>
 							</ul>
-						</li>
-
-						<li><a href="#">Listings</a>
-							<ul>
-								<li><a href="#">List Layout</a>
-									<ul>
-										<li><a href="listings-list-with-sidebar.html">With Sidebar</a></li>
-										<li><a href="listings-list-full-width.html">Full Width</a></li>
-										<li><a href="listings-list-full-width-with-map.html">Full Width + Map</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Grid Layout</a>
-									<ul>
-										<li><a href="listings-grid-with-sidebar-1.html">With Sidebar 1</a></li>
-										<li><a href="listings-grid-with-sidebar-2.html">With Sidebar 2</a></li>
-										<li><a href="listings-grid-full-width.html">Full Width</a></li>
-										<li><a href="listings-grid-full-width-with-map.html">Full Width + Map</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Half Screen Map</a>
-									<ul>
-										<li><a href="listings-half-screen-map-list.html">List Layout</a></li>
-										<li><a href="listings-half-screen-map-grid-1.html">Grid Layout 1</a></li>
-										<li><a href="listings-half-screen-map-grid-2.html">Grid Layout 2</a></li>
-									</ul>
-								</li>
-								<li><a href="listings-single-page.html">Single Listing 1</a></li>
-								<li><a href="listings-single-page-2.html">Single Listing 2</a></li>
-							</ul>
-						</li>
-
-						<li><a href="#">User Panel</a>
-							<ul>
-								<li><a href="dashboard.html">Dashboard</a></li>
-								<li><a href="dashboard-messages.html">Messages</a></li>
-								<li><a href="dashboard-bookings.html">Bookings</a></li>
-								<li><a href="dashboard-my-listings.html">My Listings</a></li>
-								<li><a href="dashboard-reviews.html">Reviews</a></li>
-								<li><a href="dashboard-bookmarks.html">Bookmarks</a></li>
-								<li><a href="dashboard-add-listing.html">Add Listing</a></li>
-								<li><a href="dashboard-my-profile.html">My Profile</a></li>
-								<li><a href="dashboard-invoice.html">Invoice</a></li>
-							</ul>
-						</li>
-
+            </li>
 					</ul>
 				</nav>
 				<div class="clearfix"></div>
-				<!-- Main Navigation / End -->
 
 			</div>
 			<!-- Left Side Content / End -->
@@ -161,39 +120,36 @@
 
 						<!-- Register -->
 						<div class="tab-content" id="tab2" style="display: none;">
-
 							<form method="post" class="register">
+  							<p class="form-row form-row-wide">
+  								<label for="username2">Username:
+  									<i class="im im-icon-Male"></i>
+  									<input type="text" class="input-text" name="username" id="username2" value="" />
+  								</label>
+  							</p>
 
-							<p class="form-row form-row-wide">
-								<label for="username2">Username:
-									<i class="im im-icon-Male"></i>
-									<input type="text" class="input-text" name="username" id="username2" value="" />
-								</label>
-							</p>
+  							<p class="form-row form-row-wide">
+  								<label for="email2">Email Address:
+  									<i class="im im-icon-Mail"></i>
+  									<input type="text" class="input-text" name="email" id="email2" value="" />
+  								</label>
+  							</p>
 
-							<p class="form-row form-row-wide">
-								<label for="email2">Email Address:
-									<i class="im im-icon-Mail"></i>
-									<input type="text" class="input-text" name="email" id="email2" value="" />
-								</label>
-							</p>
+  							<p class="form-row form-row-wide">
+  								<label for="password1">Password:
+  									<i class="im im-icon-Lock-2"></i>
+  									<input class="input-text" type="password" name="password1" id="password1"/>
+  								</label>
+  							</p>
 
-							<p class="form-row form-row-wide">
-								<label for="password1">Password:
-									<i class="im im-icon-Lock-2"></i>
-									<input class="input-text" type="password" name="password1" id="password1"/>
-								</label>
-							</p>
+  							<p class="form-row form-row-wide">
+  								<label for="password2">Repeat Password:
+  									<i class="im im-icon-Lock-2"></i>
+  									<input class="input-text" type="password" name="password2" id="password2"/>
+  								</label>
+  							</p>
 
-							<p class="form-row form-row-wide">
-								<label for="password2">Repeat Password:
-									<i class="im im-icon-Lock-2"></i>
-									<input class="input-text" type="password" name="password2" id="password2"/>
-								</label>
-							</p>
-
-							<input type="submit" class="button border fw margin-top-10" name="register" value="Register" />
-
+  							<input type="submit" class="button border fw margin-top-10" name="register" value="Register" />
 							</form>
 						</div>
 
@@ -210,42 +166,33 @@
 <!-- Header Container / End -->
 
 
-<!-- Banner
-================================================== -->
 <div class="main-search-container" data-background-image="/images/main-search-background-01.jpg" style="max-height:450px">
 	<div class="main-search-inner">
 
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<h2>Find Nearby Attractions</h2>
-					<h4>Expolore top-rated attractions, activities and more</h4>
+				<div class="col-md-9">
+					<h2>Professional Websites. Fast.</h2>
+					<h4>Create fully-featured professional websites in minutes</h4>
 
 					<div class="main-search-input">
 
-						<div class="main-search-input-item">
-							<input type="text" placeholder="What are you looking for?" value=""/>
-						</div>
-
 						<div class="main-search-input-item location">
-							<div id="autocomplete-container">
-								<input id="autocomplete-input" type="text" placeholder="Location">
+							<div>
+                <h4 style="margin-top:6px">Launch Your Site</h4>
 							</div>
-							<a href="#"><i class="fa fa-map-marker"></i></a>
 						</div>
 
 						<div class="main-search-input-item">
-							<select data-placeholder="All Categories" class="chosen-select" >
-								<option>All Categories</option>
-								<option>Shops</option>
-								<option>Hotels</option>
-								<option>Restaurants</option>
+							<select data-placeholder="All Categories" class="chosen-select">
+								<option>Resume</option>
 								<option>Fitness</option>
+								<option>Restaurant</option>
 								<option>Events</option>
 							</select>
 						</div>
 
-						<button class="button" onclick="window.location.href='listings-half-screen-map-list.html'">Search</button>
+						<button class="button">View Templates</button>
 
 					</div>
 				</div>
@@ -255,15 +202,12 @@
 	</div>
 </div>
 
-
-<!-- Content
-================================================== -->
 <div class="container">
 	<div class="row">
 
 		<div class="col-md-12">
 			<h3 class="headline centered margin-top-75">
-				Popular Categories
+				Categories
 				<span>Browse <i>the most desirable</i> categories</span>
 			</h3>
 		</div>
@@ -367,7 +311,7 @@
 
 			<div class="col-md-12">
 				<h3 class="headline centered margin-bottom-45">
-					Most Visited Places
+					Examples
 					<span>Discover top-rated local businesses</span>
 				</h3>
 			</div>
@@ -445,68 +389,6 @@
 				</div>
 				<!-- Listing Item / End -->
 
-				<!-- Listing Item -->
-				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
-						<div class="listing-item">
-							<img src="/images/listing-item-04.jpg" alt="">
-
-							<div class="listing-badge now-open">Now Open</div>
-
-							<div class="listing-item-content">
-								<span class="tag">Eat & Drink</span>
-								<h3>Burger House <i class="verified-icon"></i></h3>
-								<span>2726 Shinn Street, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-						<div class="star-rating" data-rating="5.0">
-							<div class="rating-counter">(31 reviews)</div>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
-						<div class="listing-item">
-							<img src="/images/listing-item-05.jpg" alt="">
-							<div class="listing-item-content">
-								<span class="tag">Other</span>
-								<h3>Airport</h3>
-								<span>1512 Duncan Avenue, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-						<div class="star-rating" data-rating="3.5">
-							<div class="rating-counter">(46 reviews)</div>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="carousel-item">
-					<a href="listings-single-page.html" class="listing-item-container">
-						<div class="listing-item">
-							<img src="/images/listing-item-06.jpg" alt="">
-
-							<div class="listing-badge now-closed">Now Closed</div>
-
-							<div class="listing-item-content">
-								<span class="tag">Eat & Drink</span>
-								<h3>Think Coffee</h3>
-								<span>215 Terry Lane, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-						<div class="star-rating" data-rating="4.5">
-							<div class="rating-counter">(15 reviews)</div>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
 				</div>
 
 			</div>
@@ -641,13 +523,11 @@
 <!-- Recent Blog Posts / End -->
 
 
-<!-- Footer
-================================================== -->
 <div id="footer" class="sticky-footer" style="background: rgb(248, 248, 248)">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-5 col-sm-6">
-				<img class="footer-logo" src="/images/logo.png" alt="">
+				<img id="footer-logo" class="footer-logo" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-2.svg" alt="">
 				<br><br>
 				<p>Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.</p>
 			</div>
