landing page layout

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -43,13 +43,13 @@
 				<nav id="navigation" class="style-1">
 					<ul id="responsive">
 						<li><a class="current" href="#">Home</a></li>
-						<li><a href="#">About</a></li>
+						<li><a href="#">How It Works</a></li>
 						<li><a href="#">Templates</a>
               <ul>
 								<li><a href="#">Dashboard</a></li>
 								<li><a href="#">Messages</a></li>
 								<li><a href="#">Bookings</a></li>
-								<li><a href="#">My Listings</a></li>
+								<li><a href="#">My templates</a></li>
 								<li><a href="#">Reviews</a></li>
 							</ul>
             </li>
@@ -166,7 +166,7 @@
 <!-- Header Container / End -->
 
 
-<div class="main-search-container" data-background-image="/images/main-search-background-01.jpg" style="max-height:450px">
+<div class="main-search-container" data-background-image="https://lh3.googleusercontent.com/IWUouz6uPWLofipKuaHh219C5AdniATu6C85bd6DGogdQlJ1M8BAFk6uZx-Q10pVlgYMHrRuZC5V83P_g5XGv21_bRI=s2048" style="max-height:500px">
 	<div class="main-search-inner">
 
 		<div class="container">
@@ -228,7 +228,7 @@
 				<a href="listings-half-screen-map-grid-1.html" class="category-box" data-background-image="images/category-box-01.jpg">
 					<div class="category-box-content">
 						<h3>Hotels</h3>
-						<span>64 listings</span>
+						<span>64 templates</span>
 					</div>
 					<span class="category-box-btn">Browse</span>
 				</a>
@@ -238,7 +238,7 @@
 				<a href="listings-half-screen-map-grid-1.html" class="category-box" data-background-image="images/category-box-02.jpg">
 					<div class="category-box-content">
 						<h3>Shops</h3>
-						<span>14 listings</span>
+						<span>14 templates</span>
 					</div>
 					<span class="category-box-btn">Browse</span>
 				</a>
@@ -251,7 +251,7 @@
 				<a href="listings-half-screen-map-grid-1.html" class="category-box" data-background-image="images/category-box-03.jpg">
 					<div class="category-box-content">
 						<h3>Events</h3>
-						<span>67 listings</span>
+						<span>67 templates</span>
 					</div>
 					<span class="category-box-btn">Browse</span>
 				</a>
@@ -264,7 +264,7 @@
 				<a href="listings-half-screen-map-grid-1.html" class="category-box" data-background-image="images/category-box-04.jpg">
 					<div class="category-box-content">
 						<h3>Fitness</h3>
-						<span>27 listings</span>
+						<span>27 templates</span>
 					</div>
 					<span class="category-box-btn">Browse</span>
 				</a>
@@ -277,7 +277,7 @@
 				<a href="listings-half-screen-map-list.html" class="category-box" data-background-image="images/category-box-05.jpg">
 					<div class="category-box-content">
 						<h3>Nightlife</h3>
-						<span>22 listings</span>
+						<span>22 templates</span>
 					</div>
 					<span class="category-box-btn">Browse</span>
 				</a>
@@ -290,7 +290,7 @@
 				<a href="listings-half-screen-map-list.html" class="category-box" data-background-image="images/category-box-06.jpg">
 					<div class="category-box-content">
 						<h3>Eat & Drink</h3>
-						<span>130 listings</span>
+						<span>130 templates</span>
 					</div>
 					<span class="category-box-btn">Browse</span>
 				</a>
@@ -300,7 +300,6 @@
 	</div>
 </div>
 <!-- Categories Carousel / End -->
-
 
 
 <!-- Fullwidth Section -->
@@ -324,8 +323,6 @@
 					<a href="listings-single-page.html" class="listing-item-container">
 						<div class="listing-item">
 							<img src="/images/listing-item-01.jpg" alt="">
-
-							<div class="listing-badge now-open">Now Open</div>
 
 							<div class="listing-item-content">
 								<span class="tag">Eat & Drink</span>
@@ -406,8 +403,11 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<h2 class="headline centered margin-top-80">
-				Plan The Vacation of Your Dreams
-				<span class="margin-top-25">Explore some of the best tips from around the world from our partners and friends.  Discover some of the most popular listings in Sydney.</span>
+				How It Works
+				<span class="margin-top-25">
+          Explore some of the best tips from around the world from our partners and friends.
+          Discover some of the most popular templates in Sydney.
+        </span>
 			</h2>
 		</div>
 	</div>
@@ -452,7 +452,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h3 class="headline centered margin-bottom-45">
-					From The Blog
+					Tutorials
 				</h3>
 			</div>
 		</div>
@@ -513,7 +513,9 @@
 			<!-- Blog post Item / End -->
 
 			<div class="col-md-12 centered-content">
-				<a href="pages-blog.html" class="button border margin-top-10">View Blog</a>
+				<a href="#" class="button border margin-top-10">
+          View All Tutorials
+        </a>
 			</div>
 
 		</div>
@@ -526,34 +528,26 @@
 <div id="footer" class="sticky-footer" style="background: rgb(248, 248, 248)">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-5 col-sm-6">
+			<div class="col-md-6 col-sm-6">
 				<img id="footer-logo" class="footer-logo" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-2.svg" alt="">
-				<br><br>
-				<p>Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.</p>
+				<br /><br />
+				<p>
+          Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.
+        </p>
 			</div>
 
-			<div class="col-md-4 col-sm-6 ">
+			<div class="col-md-3 col-sm-6">
 				<h4>Helpful Links</h4>
 				<ul class="footer-links">
-					<li><a href="#">Login</a></li>
-					<li><a href="#">Sign Up</a></li>
-					<li><a href="#">My Account</a></li>
-					<li><a href="#">Add Listing</a></li>
-					<li><a href="#">Pricing</a></li>
-					<li><a href="#">Privacy Policy</a></li>
-				</ul>
-
-				<ul class="footer-links">
+          <li><a href="#">Sign Up</a></li>
 					<li><a href="#">FAQ</a></li>
 					<li><a href="#">Blog</a></li>
-					<li><a href="#">Our Partners</a></li>
-					<li><a href="#">How It Works</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 				<div class="clearfix"></div>
 			</div>
 
-			<div class="col-md-3  col-sm-12">
+			<div class="col-md-3 col-sm-12">
 				<h4>Contact Us</h4>
 				<div class="text-widget">
 					<span>12345 Little Lonsdale St, Melbourne</span> <br>
@@ -563,9 +557,8 @@
 
 				<ul class="social-icons margin-top-20">
 					<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-					<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
 					<li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-					<li><a class="vimeo" href="#"><i class="icon-vimeo"></i></a></li>
+					<li><a class="youtube" href="#"><i class="icon-youtube"></i></a></li>
 				</ul>
 
 			</div>
@@ -575,7 +568,7 @@
 		<!-- Copyright -->
 		<div class="row">
 			<div class="col-md-12">
-				<div class="copyrights">&copy; 2018 Listeo. All Rights Reserved.</div>
+				<div class="copyrights">&copy; 2019 Turbo 360, Inc. All Rights Reserved.</div>
 			</div>
 		</div>
 	</div>
