--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -3,7 +3,7 @@
   <title>Vertex 360 | Professional Websites. Fast.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="/dist/css/style.min.css">
+  <link rel="stylesheet" href="{{{cdn}}}/dist/css/style.min.css">
   <style>
     #logo img {
       max-width: 160px;
@@ -574,7 +574,7 @@
 <!-- Wrapper / End -->
 
 
-<script type="text/javascript" src="/dist/js/vendor.min.js"></script>
+<script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
 
 </body>
 </html>
