populate template previews

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -345,17 +345,17 @@
 				{{#templates}}
 				<div class="col-lg-12 col-md-12">
 					<div class="listing-item-container list-layout" data-marker-id="1">
-						<a href="listings-single-page.html" class="listing-item">
+						<a href="#" class="listing-item">
 
 							<div class="listing-item-image">
-								<img src="#" alt="">
-								<span class="tag">Eat & Drink</span>
+								<img src="{{image}}=360-c" alt="">
+								<span class="tag">{{category}}</span>
 							</div>
 
 							<div class="listing-item-content">
 
 								<div class="listing-item-inner">
-									<h3>Tom's Restaurant <i class="verified-icon"></i></h3>
+									<h3>{{name}} <i class="verified-icon"></i></h3>
 									<span>964 School Street, New York</span>
 									<div class="star-rating" data-rating="3.5">
 										<div class="rating-counter">(12 reviews)</div>
