--- a/views/list.mustache
+++ b/views/list.mustache
@@ -348,15 +348,14 @@
 						<a href="#" class="listing-item">
 
 							<div class="listing-item-image">
-								<img src="{{image}}=360-c" alt="">
-								<span class="tag">{{category}}</span>
+								<img src="{{image}}=s360-c" alt="">
 							</div>
 
 							<div class="listing-item-content">
 
 								<div class="listing-item-inner">
 									<h3>{{name}} <i class="verified-icon"></i></h3>
-									<span>964 School Street, New York</span>
+									<span>{{template.category}}</span>
 									<div class="star-rating" data-rating="3.5">
 										<div class="rating-counter">(12 reviews)</div>
 									</div>
