--- a/views/list.mustache
+++ b/views/list.mustache
@@ -13,6 +13,13 @@
       max-width: 120px;
     }
 
+    .listing-item-inner span {
+      text-transform: capitalize;
+    }
+
+    listing-item-inner h3 {
+      text-transform: capitalize;
+    }
   </style>
 </head>
 
@@ -368,7 +375,6 @@
 				</div>
         {{/templates}}
 			</div>
-			<!-- Listings Container / End -->
 
 			<div class="row fs-listings">
 				<div class="col-md-12">
@@ -385,7 +391,7 @@
 
 			<!-- Content -->
 			<div class="post-content">
-        <img src="images/blog-post-02.jpg" alt="">
+        <img style="max-width:360px" src="images/blog-post-02.jpg" alt="">
 				<h3 style="margin-top:20px"><a href="#">The 50 Greatest Street Arts In London</a></h3>
 
 				<ul class="post-meta">
