--- a/views/list.mustache
+++ b/views/list.mustache
@@ -17,7 +17,7 @@
       text-transform: capitalize;
     }
 
-    listing-item-inner h3 {
+    .listing-item-inner h3 {
       text-transform: capitalize;
     }
   </style>
